# VampireSurvivor

./: .clang-format  .gitignore  CMakeLists.txt  CoreManifesto.md  Instruction.md  POWERUP_DATA.json  README.md  UI_viewer.html  project_summary.md  run.bat
InstructionList/: 0001_AskAboutTransparentPic&VideoPlayer.txt  0002_LoadingStateInstruction.md  0003_WarningStateInstruction.md  0004_MathUtilsInstruction.md  0005_FaderComponentInstruction.md  0006_ScreenTransitionManagerInstruction.md  0007_TitleScreenStateInstruction.md  0008_9SlicesScaleInstruction.md  0009_UIElementInstruction.md  0010_UIButtonInstruction.md  0011_ResourceManagerInstruction.md  0012_MainMenuInstruction.md  0013_JsonReaderInstruction.md  0014_UnifiedSmartAtlasInstruction.md  0015_LetterBoxViewInstruction.md  0017_UIButtonHoverMechanicInstruction.md  0018_PowerUpCardsInstruction.md  0019_UIGridsInstruction.md  0020_SliderInstruction.md  0021_UIScrollBarInstruction.md  0022_PowerUpStateInstruction.md  0024_9SliceUpdateInstruction.md  0025_CharacterProfileClassInstruction.md  0026_CharacterDataInstruction.md  0027_GoldWidgetInstruction.md  0028_CharacterSelectionInstruction.md  0029_StatsPanelInstruction.md  0030_CharacterWidgetInstruction.md  0031_RosterGridInstruction.md  0032_DetailPanelInstruction.md
assets/Data/: CHARACTER_DATA.json  WEAPON_DATA.json  animations.json  items_atlas.json  ui_atlas.json
assets/Data/CharacterAtlas/: character_ambrojoe_atlas.json  character_antonio_atlas.json  character_arca_atlas.json  character_assunta_atlas.json  character_avatar_atlas.json  character_batsbatsbats_atlas.json  character_boros_atlas.json  character_cavallo_atlas.json  character_christine_atlas.json  character_chulareh_atlas.json  character_concetta_atlas.json  character_cosmo_atlas.json  character_divano_atlas.json  character_dommario_atlas.json  character_dragogion_atlas.json  character_exdash_atlas.json  character_followers_atlas.json  character_gallo_atlas.json  character_gazebo_atlas.json  character_gennaro_atlas.json  character_giovanna_atlas.json  character_gyoruntin_atlas.json  character_imelda_atlas.json  character_krochi_atlas.json  character_lama_atlas.json  character_leda_atlas.json  character_marrabbio_atlas.json  character_minnah_atlas.json  character_missing_atlas.json  character_moonduck_atlas.json  character_moonrabbit_atlas.json  character_mortaccio_atlas.json  character_osole_atlas.json  character_panini_atlas.json  character_pantalonerun_atlas.json  character_pasqualina_atlas.json  character_peppino_atlas.json  character_poe_atlas.json  character_poppea_atlas.json  character_porta_atlas.json  (+20 more)
assets/Data/enemies/: forest_enemies.json  stage_enemies.json
assets/Shaders/: pixelate.frag
assets/fonts/: illustration_atlas.json
include/: main.h
src/: main.cpp
src/Components/: AnimationComponent.cpp  AnimationComponent.h
src/Core/: WindowSettings.h
src/Core/Animation/: AnimationData.h  AnimationLibrary.cpp  AnimationLibrary.h  Spring.cpp  Spring.h  SpriteAnimator.cpp  SpriteAnimator.h  Tweener.cpp  Tweener.h
src/Core/Data/: CharacterDataManager.cpp  CharacterDataManager.h  CharacterProfile.h  PlayerProgressionManager.cpp  PlayerProgressionManager.h  PowerUpData.h  PowerUpDataManager.cpp  PowerUpDataManager.h  PowerUpProfile.h  WeaponDataManager.cpp  WeaponDataManager.h  WeaponProfile.cpp  WeaponProfile.h
src/Core/Math/: MathUtils.cpp  MathUtils.h
src/Core/Physics/: Collision.cpp  Collision.h
src/Core/Resources/: ResourceIdentifiers.h  ResourceManager.h  TextureAtlas.cpp  TextureAtlas.h
src/Core/UI/: ScreenTransitionManager.cpp  ScreenTransitionManager.h
src/Entities/: Agent.cpp  Agent.h  Player.cpp  Player.h
src/Entities/Enemy/: AnimatedEnemy.cpp  AnimatedEnemy.h  Bat1.cpp  Bat1.h  EnemyBase.cpp  EnemyBase.h  EnemyDatabase.cpp  EnemyDatabase.h  EnemyDefinition.h  EnemyFactory.cpp  EnemyFactory.h  EnemyPool.cpp  EnemyPool.h  EnemyType.h  Skeleton.cpp  Skeleton.h
src/States/: BaseState.h  StateContext.h  StateManager.cpp  StateManager.h
src/States/Game/: GameState.cpp  GameState.h  StageLoadingState.cpp  StageLoadingState.h
src/States/Intro/: LoadingState.cpp  LoadingState.h  WarningState.cpp  WarningState.h
src/States/Menu/: CharacterSelectionScreen.cpp  CharacterSelectionScreen.h  MainMenuState.cpp  MainMenuState.h  PowerUpState.cpp  PowerUpState.h
src/States/Title/: TitleState.cpp  TitleState.h
src/UI/: UIManager.cpp  UIManager.h
src/UI/Components/: FaderComponent.cpp  FaderComponent.h  NineSliceComponent.cpp  NineSliceComponent.h  PowerUpCard.cpp  PowerUpCard.h  UIDetailPanel.cpp  UIDetailPanel.h  UIGridLayout.cpp  UIGridLayout.h  UIScrollView.cpp  UIScrollView.h  UIScrollbar.cpp  UIScrollbar.h
src/UI/Core/: TextUtility.cpp  TextUtility.h  UIElement.cpp  UIElement.h
src/UI/Elements/: CharacterCardWidget.cpp  CharacterCardWidget.h  GoldDisplayWidget.cpp  GoldDisplayWidget.h  UIButton.cpp  UIButton.h  UIPlayerCoopCard.cpp  UIPlayerCoopCard.h
src/UI/Panels/: DetailPanel.cpp  DetailPanel.h  MainBoardPanel.cpp  MainBoardPanel.h  RosterGridPanel.cpp  RosterGridPanel.h  StatsPanel.cpp  StatsPanel.h  UIPanel.cpp  UIPanel.h
src/UI/Views/: CharacterSelectionView.cpp  CharacterSelectionView.h
src/World/: TileMap.cpp  TileMap.h  TileMapManager.cpp  TileMapManager.h
tools/: extract_vs_forest_enemies.py  extract_vs_forest_map.py  extract_vs_library_map.py  extract_vs_plant_map.py  extract_vs_stage_enemies.py
